--- a/package.json
+++ b/package.json
@@ -1,22 +1,39 @@
 {
   "name": "paper-plane",
   "private": true,
+  "author": {
+    "name": "Matej Kňazík",
+    "email": "mato.knazik@gmail.com"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "types": "tsc",
     "lint": "next lint"
   },
+  "pre-commit": [
+    "build",
+    "types",
+    "lint"
+  ],
   "dependencies": {
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@kiwicom/eslint-config": "^12.0.1",
     "@types/node": "17.0.15",
     "@types/react": "17.0.39",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
+    "eslint-plugin-jest-dom": "^4.0.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-testing-library": "^5.0.5",
+    "pre-commit": "^1.2.2",
     "typescript": "4.5.5"
   }
 }
