--- a/package.json
+++ b/package.json
@@ -18,16 +18,22 @@
     "lint"
   ],
   "dependencies": {
+    "@kiwicom/orbit-components": "^2.10.0",
+    "@kiwicom/orbit-design-tokens": "^1.0.6",
     "next": "12.0.10",
+    "normalize.css": "^8.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@kiwicom/eslint-config": "^12.0.1",
     "@types/node": "17.0.15",
     "@types/react": "17.0.39",
+    "@types/styled-components": "^5.1.22",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "eslint-plugin-jest-dom": "^4.0.1",
