--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint"
   ],
   "dependencies": {
+    "@hookform/resolvers": "^2.8.8",
     "@kiwicom/orbit-components": "^2.10.0",
     "@kiwicom/orbit-design-tokens": "^1.0.6",
     "next": "12.0.10",
@@ -25,7 +26,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.27.1",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "zod": "^3.13.4"
   },
   "devDependencies": {
     "@kiwicom/eslint-config": "^12.0.1",
