--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@hookform/resolvers": "^2.8.8",
     "@kiwicom/orbit-components": "^2.10.0",
     "@kiwicom/orbit-design-tokens": "^1.0.6",
+    "firebase": "^9.6.8",
     "next": "12.0.10",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-firebaseui": "^6.0.0",
     "react-hook-form": "^7.27.1",
     "styled-components": "^5.3.3",
     "zod": "^3.13.4"
