--- a/package.json
+++ b/package.json
@@ -10,31 +10,44 @@
     "build": "next build",
     "start": "next start",
     "types": "tsc",
+    "test": "jest",
     "lint": "next lint"
   },
   "pre-commit": [
     "build",
     "types",
-    "lint"
+    "lint",
+    "test"
   ],
   "dependencies": {
     "@hookform/resolvers": "^2.8.8",
     "@kiwicom/orbit-components": "^2.10.0",
     "@kiwicom/orbit-design-tokens": "^1.0.6",
+    "axios": "^0.26.1",
+    "chance": "^1.1.8",
     "firebase": "^9.6.8",
+    "json-schema-faker": "^0.5.0-rcv.42",
+    "lodash": "^4.17.21",
     "next": "12.0.10",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebaseui": "^6.0.0",
     "react-hook-form": "^7.27.1",
+    "react-json-editor-ajrm": "^2.5.13",
+    "react-json-view-compare": "^2.0.1",
+    "react-query": "^3.34.16",
     "styled-components": "^5.3.3",
     "zod": "^3.13.4"
   },
   "devDependencies": {
     "@kiwicom/eslint-config": "^12.0.1",
+    "@types/chance": "^1.1.3",
+    "@types/jest": "^27.4.1",
+    "@types/lodash": "^4.14.180",
     "@types/node": "17.0.15",
     "@types/react": "17.0.39",
+    "@types/react-json-editor-ajrm": "^2.5.3",
     "@types/styled-components": "^5.1.22",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
@@ -44,7 +57,11 @@
     "eslint-plugin-jest-dom": "^4.0.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-testing-library": "^5.0.5",
+    "jest": "^27.5.1",
+    "openapi-types": "^10.0.0",
     "pre-commit": "^1.2.2",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
     "typescript": "4.5.5"
   }
 }
