--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "react-json-view-compare": "^2.0.1",
     "react-query": "^3.34.16",
     "styled-components": "^5.3.3",
+    "z-schema": "^5.0.2",
     "zod": "^3.13.4"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.1.0",
     "@kiwicom/eslint-config": "^12.0.1",
     "@types/chance": "^1.1.3",
     "@types/jest": "^27.4.1",
