--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@hookform/resolvers": "^2.8.8",
     "@kiwicom/orbit-components": "^2.10.0",
     "@kiwicom/orbit-design-tokens": "^1.0.6",
+    "@react-query-firebase/firestore": "^0.4.2",
     "axios": "^0.26.1",
     "chance": "^1.1.8",
     "firebase": "^9.6.8",
