--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-query-firebase/firestore": "^0.4.2",
     "axios": "^0.26.1",
     "chance": "^1.1.8",
+    "cors": "^2.8.5",
     "firebase": "^9.6.8",
     "json-schema-faker": "^0.5.0-rcv.42",
     "lodash": "^4.17.21",
@@ -47,6 +48,7 @@
     "@hookform/devtools": "^4.1.0",
     "@kiwicom/eslint-config": "^12.0.1",
     "@types/chance": "^1.1.3",
+    "@types/cors": "^2.8.12",
     "@types/jest": "^27.4.1",
     "@types/lodash": "^4.14.180",
     "@types/node": "17.0.15",
