feat(paperplane): returning correct mock from API

--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "chance": "^1.1.8",
     "cors": "^2.8.5",
     "firebase": "^9.6.8",
+    "firebase-admin": "^10.0.2",
     "json-schema-faker": "^0.5.0-rcv.42",
     "lodash": "^4.17.21",
     "next": "12.0.10",
     "normalize.css": "^8.0.1",
+    "path-to-regexp": "^6.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebaseui": "^6.0.0",
